# Parallel I/O test programs - v1.9.0
#
# This directory contains parallel I/O test programs that require MPI.
# These tests are only built when ENABLE_PARALLEL_TESTS is ON.

message(STATUS "test_parallel/: Parallel test directory ready for Sprint 3")

# Placeholder for Sprint 3 parallel tests
# add_executable() calls will be added in Sprint 3

# For now, just verify the directory structure is in place
# Actual parallel test programs will be added in Sprint 3
