# Parallel I/O test programs - v1.9.0
#
# This directory contains parallel I/O test programs that require MPI.
# These tests are only built when --enable-parallel-tests is specified.

if HAVE_PARALLEL_TESTS

# Placeholder for Sprint 3 parallel tests
# check_PROGRAMS will be populated in Sprint 3 with actual parallel test programs
check_PROGRAMS =

TESTS = $(check_PROGRAMS)

LDADD = -lnetcdf
AM_CPPFLAGS = -I$(top_srcdir)/include
AM_LDFLAGS =

endif
